@@ -70,8 +70,16 @@ span.select_wrap.countryname{width:330px; padding:0 10px; text-align:left;}
 span.select_wrap.publishername		{width:300px; padding:0 10px; text-align:left;}
 .publisher_list				{width:100%; height:100%; color:#fff; font-size:1.2em; line-height:1.15em; display:block; padding:20px 0; font-weight:bold;}
 a.country_code				{width:100%; height:100%; color:#fff; font-size:1.2em; line-height:1.15em; display:block; padding:20px 0; vertical-align:top; text-align:center;}
-a.country_code.publishers	{width:820px; padding:20px; font-size:1.2em;}
 a.country_code:hover		{background-color:rgba(37, 115, 205, 0.7);}
+
+
+/*	Select dropdowns
+	============================================= */
+#country_dropmenu, #publisher_dropmenu					{display:inline-block; vertical-align:top; width:460px; margin-bottom:20px; margin-right:20px;}
+#publisher_dropmenu										{margin-right:0; margin-left:20px;}
+#country_dropmenu select, #publisher_dropmenu select	{min-width:460px;}
+.chosen-container-single .chosen-single span			{color:#444;}
+.chosen-container .chosen-results li					{text-align:left;}
 
 
 /*	Text and Description styles
