@@ -80,7 +80,7 @@ d-portal.org还处于非常早期的开发，定于四月中旬Alpha版本。感
 您也可以选择多个国家或出版商的选择。只有国家和出版商公布的数据，以IATI可供探索。
 
 #footer1_text
-一个2014项目的门户开发团队
+2014年项目由d-portal队
 
 #footer1_tip_text
 国际援助透明度倡议(IATI)
@@ -336,3 +336,9 @@ Dash是目前在访问<a href="http://d-portal.org/ctrack.html?#view=dash" class
 
 #sources_data8_text 
 Pixabay公共领域中的映像
+
+#publisher_dropmenu_text trim=ends
+选择发布 
+
+#country_dropmenu_text trim=ends
+选择一个受援国
