@@ -80,7 +80,7 @@ Pick a country or publisher below to explore their data.
 You can also pick multiple countries or publishers from the selector. Only countries and publishers with published data to IATI are available for exploration. 
 
 #footer1_text
-A 2014 project by the Development Portal team
+A 2014 project by the d-portal team
 
 #footer1_tip_text
 International Aid Transparency Initiative (IATI)
@@ -257,10 +257,10 @@ Top of page
 About d-portal.org
 
 #dportal_logo_alt_text
-Development Portal logo
+d-portal logo
 
 #mainback_tip_text
-Back to Development Portal
+Back to d-portal
 
 #flava_high_visibility_text
 High Visibility
@@ -269,7 +269,7 @@ High Visibility
 Original
 
 #blog_head_text
-Development Portal News
+d-portal News
 
 #posted_on_text
 Posted on
@@ -342,3 +342,9 @@ Public Google Spreadsheet
 
 #sources_data8_text
 Pixabay Public Domain only images
+
+#publisher_dropmenu_text trim=ends
+Select a Publisher
+
+#country_dropmenu_text trim=ends
+Select a Recipient Country
