@@ -80,7 +80,7 @@ Choisissez un pays ou de l'éditeur ci-dessous pour explorer leurs données.
 Vous pouvez également choisir plusieurs pays ou les éditeurs de la sélection. Seuls les pays et les éditeurs avec les données publiées à l'IITA sont disponibles pour l'exploration.
 
 #footer1_text
-Un projet 2014 par l'équipe du Development Portal
+Un projet 2014 par l'équipe du d-portal
 
 #footer1_tip_text
 Initiative internationale pour la transparence de l'aide (IATI)
@@ -257,10 +257,10 @@ Haut de la page
 À propos de d-portal.org 
 
 #dportal_logo_alt_text 
-Logo Portail de Développement 
+Logo d-portal
 
 #mainback_tip_text 
-Retour au développement Portal 
+Retour au d-portal
 
 #flava_high_visibility_text 
 Haute Visibilité 
@@ -269,7 +269,7 @@ Haute Visibilité
 Original
 
 #blog_head_text 
-Portail de Développement Nouvelles 
+d-portal Nouvelles 
 
 #posted_on_text 
 Posté le 
@@ -336,3 +336,9 @@ Public feuille de calcul Google
 
 #sources_data8_text 
 Pixabay du domaine public que des images
+
+#publisher_dropmenu_text trim=ends
+Sélectionnez un éditeur 
+
+#country_dropmenu_text trim=ends
+Sélectionnez un pays bénéficiaire
