@@ -80,7 +80,7 @@ d-portal के बारे में और अधिक पढ़ें
 आप भी चयनकर्ता से कई देशों या प्रकाशकों ले सकते हैं. केवल देशों और IATI को प्रकाशित आंकड़ों के साथ प्रकाशकों की खोज के लिए उपलब्ध हैं.
 
 #footer1_text
-पोर्टल विकास दल द्वारा एक 2014 परियोजना
+d-portal की टीम ने एक 2014 परियोजना
 
 #footer1_tip_text
 अंतरराष्ट्रीय सहायता पारदर्शिता पहल (IATI)
@@ -336,3 +336,9 @@ Dash में मौजूदा समय में पहुंचा जा 
 
 #sources_data8_text 
 Pixabay पब्लिक डोमेन केवल छवियों
+
+#publisher_dropmenu_text trim=ends
+एक प्रकाशक का चयन करें 
+
+#country_dropmenu_text trim=ends
+एक प्राप्तकर्ता देश का चयन करें
