@@ -80,7 +80,7 @@ d-portalについての詳細を読む
 また、セレクタから複数の国やパブリッシャーを選ぶことができます。だけの国と​​IATIに公開されたデータと出版社が探査のための利用可能です。
 
 #footer1_text
-開発ポータルチームによる2014年のプロジェクト
+d-portalチームが2014年のプロジェクト
 
 #footer1_tip_text
 国際援助透明性イニシアティブ（ IATI ）
@@ -344,3 +344,9 @@ Dash現在の位置はアクセスできますか<a href="http://d-portal.org/ct
 
 #sources_data8_text 
 Pixabayパブリックドメインの画像のみ
+
+#publisher_dropmenu_text trim=ends
+出版社を選択 
+
+#country_dropmenu_text trim=ends
+受信者の国を選択
