@@ -80,7 +80,7 @@ Escoge un país o editor de abajo para explorar sus datos.
 También puede recoger varios países o los editores del selector. Sólo los países y editores con los datos publicados a IATI están disponibles para la exploración.
 
 #footer1_text
-Un proyecto de 2014 por el equipo de Desarrollo de Portal
+Un proyecto de 2014 por el equipo de d-portal
 
 #footer1_tip_text
 Iniciativa Internacional para la Transparencia de la Ayuda (IATI)
@@ -257,10 +257,10 @@ Principio de la página
 Acerca de d-portal.org 
 
 #dportal_logo_alt_text 
-Logo Portal de Desarrollo 
+Logo d-portal
 
 #mainback_tip_text 
-Volver al Desarrollo Portal 
+Volver al d-portal
 
 #flava_high_visibility_text 
 Alta Visibilidad 
@@ -269,7 +269,7 @@ Alta Visibilidad
 Original
 
 #blog_head_text 
-Portal de Desarrollo Noticias 
+d-portal Noticias 
 
 #posted_on_text 
 Publicado el 
@@ -336,3 +336,9 @@ Pública de hoja de cálculo Google
 
 #sources_data8_text 
 Sólo Pixabay dominio público imágenes
+
+#publisher_dropmenu_text trim=ends
+Seleccionar un publicador 
+
+#country_dropmenu_text trim=ends
+Seleccione un país receptor
