@@ -1,6 +1,10 @@
 Static site (2014-10-08 shi)
 ==============================
 Redesign index page to include both countries and publishers
+Fixed new content for all translations
+Replaced Development Portal with d-portal
+Added selector dropdown menu for both countries and publishers
+Translations for selector text
 
 
 Static site (2014-09-19 shi)
